--- a/src/main/java/gui/AlgorithmTestDialog.form
+++ b/src/main/java/gui/AlgorithmTestDialog.form
@@ -93,7 +93,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="9a4cc" binding="algorythm" layout-manager="FormLayout">
+              <grid id="9a4cc" binding="algorithm" layout-manager="FormLayout">
                 <rowspec value="center:d:noGrow"/>
                 <colspec value="fill:d:noGrow"/>
                 <colspec value="left:4dlu:noGrow"/>
@@ -105,7 +105,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="1a779" class="javax.swing.JComboBox" binding="algorythmComboBox">
+                  <component id="1a779" class="javax.swing.JComboBox" binding="algorithmComboBox">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                       <forms/>
