--- a/src/main/java/gui/MainWindow.form
+++ b/src/main/java/gui/MainWindow.form
@@ -228,7 +228,7 @@
                         <properties/>
                         <border type="none"/>
                         <children>
-                          <component id="f0869" class="javax.swing.JComboBox" binding="rozkladComboBox">
+                          <component id="f0869" class="javax.swing.JComboBox" binding="distributionComboBox">
                             <constraints>
                               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                               <forms/>
