--- a/src/main/java/gui/AlgorithmTestDialog.form
+++ b/src/main/java/gui/AlgorithmTestDialog.form
@@ -98,6 +98,8 @@
                 <colspec value="fill:d:noGrow"/>
                 <colspec value="left:4dlu:noGrow"/>
                 <colspec value="fill:max(d;4px):noGrow"/>
+                <colspec value="left:4dlu:noGrow"/>
+                <colspec value="fill:max(d;4px):noGrow"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
                   <forms defaultalign-horz="false" defaultalign-vert="false"/>
@@ -120,6 +122,15 @@
                     <properties>
                       <opaque value="false"/>
                       <text value="Algorytm sortowania: "/>
+                    </properties>
+                  </component>
+                  <component id="c7a4e" class="javax.swing.JCheckBox" binding="debugModeCheckBox">
+                    <constraints>
+                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <forms/>
+                    </constraints>
+                    <properties>
+                      <text value="debug"/>
                     </properties>
                   </component>
                 </children>
