--- a/src/main/java/gui/MainWindow.form
+++ b/src/main/java/gui/MainWindow.form
@@ -233,7 +233,10 @@
                               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                               <forms/>
                             </constraints>
-                            <properties/>
+                            <properties>
+                              <opaque value="true"/>
+                              <preferredSize width="50" height="26"/>
+                            </properties>
                           </component>
                           <component id="9b6a6" class="javax.swing.JLabel">
                             <constraints>
@@ -373,18 +376,6 @@
                 </children>
               </grid>
             </children>
-          </grid>
-          <grid id="5b71c" binding="resultsTab" layout-manager="FormLayout">
-            <rowspec value="center:d:grow"/>
-            <colspec value="fill:d:grow"/>
-            <constraints>
-              <tabbedpane title="Wyniki">
-                <tooltip value="Zakładka z wynikami przeprowadzonego testu porównanwczego"/>
-              </tabbedpane>
-            </constraints>
-            <properties/>
-            <border type="none" title=""/>
-            <children/>
           </grid>
         </children>
       </tabbedpane>
