--- a/src/main/java/gui/TestConfigDialog.form
+++ b/src/main/java/gui/TestConfigDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.AlgorithmTestDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.TestConfigDialog">
   <grid id="27dc6" binding="rootPanel" layout-manager="FormLayout">
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
