--- a/src/main/java/gui/TestConfigDialog.form
+++ b/src/main/java/gui/TestConfigDialog.form
@@ -135,6 +135,7 @@
                     </constraints>
                     <properties>
                       <text value="debug"/>
+                      <visible value="true"/>
                     </properties>
                   </component>
                 </children>
